style.css
@font-face {
  font-family: Racing;
  src: url(racing_sans_one_regular.ttf);
}

html {
  --color-green: rgb(0, 153, 0);
  --color-black: rgb(22, 22, 22);
  --color-gray: rgb(110, 110, 110);
  --color-light-gray: rgb(190, 190, 190);
  --color-white: rgb(255, 255, 255);
}

body {
  margin: 0px;
  overflow: hidden;
  overflow-x: hidden;
}

div.main_grid {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 15em auto;
  grid-template-rows: 4em auto;
}

div.header_container {
  position: relative;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: var(--color-green);
  display: flex;
}
div.header_dropdown_button {
  flex-grow: 1;
  background-color: var(--color-gray);
  border: 10px solid var(--color-black);
  transition: 0.03s;
  transition-timing-function: ease-out;
}
div.header_dropdown_button:hover {
  background-color: var(--color-light-gray);
  border-color: var(--color-gray);
}

div.header_text {
  flex-grow: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2em;
  font-family: Racing, Impact, sans-serif;
  color: var(--color-black);
  user-select: none;
}

div.sidebar_grid {
  position: relative;
  z-index: 0;
  font-size: 1.3em;
  background-color: var(--color-black);

  --element-count: 4;
  --buffer-height: 1em;
  --element-height: 1.6em;
  display: grid;
  grid-template-rows: var(--buffer-height)
    repeat(var(--element-count), var(--element-height));
}
a.sidebar_element {
  display: flex;
  align-items: center;
  padding-left: 1.5em;
  font-family: "Arial Black", Gadget, sans-serif;
  color: var(--color-light-gray);
  background-color: var(--color-black);
  transition: 0.03s;
  transition-timing-function: ease-out;
  user-select: none;
}
a.sidebar_element:hover {
  padding-left: 2.0em;
  color: var(--color-black);
  background-color: var(--color-gray);
  cursor: pointer;
}

div.page_content {
  position: relative;
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 3;
  width: calc(100% - 4em);
  height: calc(100% - 2em);
  font-size: 1.1em;
  font-family: Arial;
  padding: 1em;
  border-left: 1em solid var(--color-gray);
  border-right: 1em solid var(--color-gray);
  background-color: var(--color-white);
  overflow-y: scroll;
}

@media screen and (max-width: 70em) {
  body {
    overflow-y: scroll;
  }
  div.main_grid {
    grid-template-columns: auto;
    grid-template-rows: 4em auto;
  }

  div.header_container {
    grid-row-start: 1;
    grid-row-end: 2;
  }
  div.header_dropdown_button {
    display: block;
  }

  div.sidebar_grid {
    grid-row-start: 2;
    grid-row-end: 3;
    display: none;
  }

  div.page_content {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 3;
    grid-row-end: 4;
    border: none;
    width: calc(100% - 2em);
    height: 100%;
    overflow: visible;
  }
}

@media screen and (min-width: 70em)
{
  div.header_dropdown_button {
    display: none;
  }
}

